%%
%% Diagrama de clases de intenciones de visitante para tracking-context
%% Fecha: 2025-05-20
%%
classDiagram
    class VisitorIntent {
      +Uuid id
      +VisitorId visitorId
      +IntentType type
      +IntentConfidence confidence
      +Date detectedAt
      +toPrimitives()
      +fromPrimitives()
      +create()
    }
    class IntentType {
      <<value object>>
      +PURCHASE
      +RESEARCH
    }
    class IntentConfidence {
      <<value object>>
      +HIGH
      +MEDIUM
      +LOW
    }
    class BasicIntentDetector {
      +detect(visitorId, events)
    }
    class IIntentDetectorRepository {
      +save()
      +findById()
      +findAll()
      +delete()
      +update()
      +findOne()
      +match()
    }
    class IntentDetectedEvent {
      <<domain event>>
    }
    VisitorIntent o-- IntentType
    VisitorIntent o-- IntentConfidence
    VisitorIntent o-- IntentDetectedEvent
    BasicIntentDetector ..> VisitorIntent
    VisitorIntent ..> IIntentDetectorRepository
